deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: press
  namespace: press
spec:
  selector:
    app: press
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
